--- a/code/public/stylesheets/default.css
+++ b/code/public/stylesheets/default.css
@@ -171,6 +171,12 @@ main {
     justify-content: space-between;
 }
 
+.plusimage {
+    margin-top: 30px;
+    margin-right: 0;
+    height: 7vh;
+}
+
 span #plusimage {
     margin-top: 25px;
     margin-right: 30px;
