--- a/code/public/stylesheets/forms.css
+++ b/code/public/stylesheets/forms.css
@@ -65,6 +65,12 @@
 }
 
 
+input{
+    border: 0.4vh solid;
+    border-color: black;
+}
+
+
 /* Full-width input fields */
 
 .form-container input[type=text],
@@ -72,7 +78,6 @@
     width: 100%;
     padding: 15px;
     margin: 5px 0 22px 0;
-    border: none;
     background: #f1f1f1;
 }
 
@@ -151,4 +156,15 @@
     color: #000;
     text-decoration: none;
     cursor: pointer;
+}
+
+#fields{
+    border: 0.4vh solid;
+    border-color: black;
+}
+
+.radioDiv{
+    display: inline-block;
+    border: 0.4vh solid;
+    border-color: black;
 }
