--- a/code/public/stylesheets/eventLobby.css
+++ b/code/public/stylesheets/eventLobby.css
@@ -31,6 +31,7 @@ article {
 #groupDiv {
     display: flex;
     margin-left: 10vh;
+    justify-content: center;
 }
 
 nav {
@@ -242,4 +243,19 @@ table>tbody>tr>td {
 
 .titles {
     font-size: 7vh;
+}
+
+#overflowgroupdiv {
+    overflow: auto;
+    min-height: 70vh;
+    max-height: 70vh;
+}
+
+#overflowgroupdiv div {
+    margin: 5px
+}
+
+.form-content {
+    padding-bottom: 20px;
+    min-width: 700px;
 }
