--- a/code/public/stylesheets/index.css
+++ b/code/public/stylesheets/index.css
@@ -6,8 +6,6 @@
     font-style: normal;
 }
 
-
-
 .testImg {
     max-width: 50%;
     min-width: 50%;
@@ -15,7 +13,6 @@
 }
 
 body {
-    
     width: 100%;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -115,13 +112,12 @@ mark {
 footer {
     font-family: 'prestige';
     text-align: center;
-    color:white;
-    background-color:#827725;
+    color: white;
+    background-color: #827725;
     margin: auto;
     padding: auto;
     width: 100%;
     padding: 4vh;
-    
 }
 
 @font-face {
@@ -139,7 +135,6 @@ footer {
     z-index: 1;
     top: -92vh;
     margin-left: 70vh;
-   
 }
 
 header {
@@ -171,19 +166,19 @@ header {
     letter-spacing: 0.6vh;
 }
 
-.menu > a:hover{
-    color:black !important;
+.menu>a:hover {
+    color: black !important;
 }
 
 #userboxHeader {
     display: flex;
     flex-direction: column;
     margin-right: 10vh;
-    cursor:pointer;
+    cursor: pointer;
 }
 
-#userboxHeader:hover{
-    color:black;
+#userboxHeader:hover {
+    color: black;
 }
 
 #userNameheader {
@@ -219,38 +214,46 @@ header {
     right: -40vh;
 }
 
+
 /* width */
+
 ::-webkit-scrollbar {
     width: 20px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px#353321; 
-    border-radius: 10px;
-  }
-   
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background:#353321; 
-    border-radius: 10px;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #1c1a11; 
-  }
+}
 
-  a:link{
-      color:black;
-  }
 
-  a:hover{
+/* Track */
+
+ ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px#353321;
+    border-radius: 10px;
+}
+
+
+/* Handle */
+
+ ::-webkit-scrollbar-thumb {
+    background: #353321;
+    border-radius: 10px;
+}
+
+
+/* Handle on hover */
+
+ ::-webkit-scrollbar-thumb:hover {
+    background: #1c1a11;
+}
+
+a:link {
+    color: black;
+}
+
+a:hover {
     color: white;
 }
 
-#logo{
-    position:fixed;
+#logo {
+    position: fixed;
     z-index: 300;
     -webkit-animation-name: animatetop !;
     -webkit-animation-duration: 1s;
@@ -258,36 +261,50 @@ header {
     animation-duration: 1s;
 }
 
-/* Add Animation */
-@-webkit-keyframes animatetop {
-    from {top:-300px; opacity:0} 
-    to {top:0; opacity:1}
-  }
 
-  @keyframes animatetop {
-    from {top:-300px; opacity:0}
-    to {top:0; opacity:1}
-  }
-  
-  .run-animation {
+/* Add Animation */
+
+@-webkit-keyframes animatetop {
+    from {
+        top: -300px;
+        opacity: 0
+    }
+    to {
+        top: 0;
+        opacity: 1
+    }
+}
+
+@keyframes animatetop {
+    from {
+        top: -300px;
+        opacity: 0
+    }
+    to {
+        top: 0;
+        opacity: 1
+    }
+}
+
+.run-animation {
     position: relative;
     animation: animatetop 1s ease;
-  }
+}
 
-  #miniLogo{
-      max-width: 10vh;
+#miniLogo {
+    max-width: 10vh;
     padding-left: 3vh;
-    cursor:pointer;
-  }
+    cursor: pointer;
+}
 
-#TCPdescription{
-    color:white;
-    z-index:50;
-    position:absolute;
+#TCPdescription {
+    color: white;
+    z-index: 50;
+    position: absolute;
     font-family: 'prestige';
-    font-size:2.1vh;
-    top:85vh;
-    left:130vh;
+    font-size: 2.1vh;
+    top: 85vh;
+    left: 130vh;
 }
 
 .badge {
@@ -346,4 +363,20 @@ table>tbody>tr>td {
 
 table>tbody>tr:hover {
     background-color: #353321;
+}
+
+table>tbody>tr:hover {
+    background-color: #353321;
+}
+
+tr:nth-child(even) {
+    background: #DDDACC
+}
+
+tr:nth-child(odd) {
+    background-color: #827725;
+}
+
+.form-content {
+    background-color: #827725;
 }
